[package]
name = "substrate"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"         # Lightweight, async web framework
tokio = { version = "1", features = ["full"] } # Async runtime
serde = { version = "1.0", features = ["derive"] } # Serialization
uuid = { version = "1", features = ["v4"] }
wasmtime = "10" # WebAssembly runtime
wasmtime-wasi = "10.0"
bytes = "1.4" # Ensure you use the latest version
chrono = "0.4"
serde_json = "1.0"
clap = { version = "4.1", features = ["derive"] }
anyhow = "1.0"